pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: todo-77868b76f5-9gvlh
  generateName: todo-77868b76f5-
  namespace: default
  uid: 36dad819-5bcf-4069-a9f5-aa1554cf2162
  resourceVersion: '3555'
  creationTimestamp: '2021-12-01T17:07:23Z'
  labels:
    k8s-app: todo
    pod-template-hash: 77868b76f5
  ownerReferences:
    - apiVersion: apps/v1
      kind: ReplicaSet
      name: todo-77868b76f5
      uid: edfb7964-cd1d-42b3-be48-ded6f4e7b688
      controller: true
      blockOwnerDeletion: true
  managedFields:
    - manager: kube-controller-manager
      operation: Update
      apiVersion: v1
      time: '2021-12-01T17:07:23Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:generateName: {}
          f:labels:
            .: {}
            f:k8s-app: {}
            f:pod-template-hash: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"edfb7964-cd1d-42b3-be48-ded6f4e7b688"}: {}
        f:spec:
          f:containers:
            k:{"name":"todo"}:
              .: {}
              f:image: {}
              f:imagePullPolicy: {}
              f:name: {}
              f:resources: {}
              f:securityContext:
                .: {}
                f:privileged: {}
              f:terminationMessagePath: {}
              f:terminationMessagePolicy: {}
          f:dnsPolicy: {}
          f:enableServiceLinks: {}
          f:restartPolicy: {}
          f:schedulerName: {}
          f:securityContext: {}
          f:terminationGracePeriodSeconds: {}
    - manager: kubelet
      operation: Update
      apiVersion: v1
      time: '2021-12-01T17:07:26Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          f:conditions:
            k:{"type":"ContainersReady"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
            k:{"type":"Initialized"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
            k:{"type":"Ready"}:
              .: {}
              f:lastProbeTime: {}
              f:lastTransitionTime: {}
              f:status: {}
              f:type: {}
          f:containerStatuses: {}
          f:hostIP: {}
          f:phase: {}
          f:podIP: {}
          f:podIPs:
            .: {}
            k:{"ip":"172.17.0.4"}:
              .: {}
              f:ip: {}
          f:startTime: {}
      subresource: status
spec:
  volumes:
    - name: kube-api-access-z9sf9
      projected:
        sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              name: kube-root-ca.crt
              items:
                - key: ca.crt
                  path: ca.crt
          - downwardAPI:
              items:
                - path: namespace
                  fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
        defaultMode: 420
  containers:
    - name: todo
      image: ashishdavid/todo:latest
      resources: {}
      volumeMounts:
        - name: kube-api-access-z9sf9
          readOnly: true
          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      imagePullPolicy: Always
      securityContext:
        privileged: false
  restartPolicy: Always
  terminationGracePeriodSeconds: 30
  dnsPolicy: ClusterFirst
  serviceAccountName: default
  serviceAccount: default
  nodeName: minikube
  securityContext: {}
  schedulerName: default-scheduler
  tolerations:
    - key: node.kubernetes.io/not-ready
      operator: Exists
      effect: NoExecute
      tolerationSeconds: 300
    - key: node.kubernetes.io/unreachable
      operator: Exists
      effect: NoExecute
      tolerationSeconds: 300
  priority: 0
  enableServiceLinks: true
  preemptionPolicy: PreemptLowerPriority
status:
  phase: Running
  conditions:
    - type: Initialized
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2021-12-01T17:07:23Z'
    - type: Ready
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2021-12-01T17:07:26Z'
    - type: ContainersReady
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2021-12-01T17:07:26Z'
    - type: PodScheduled
      status: 'True'
      lastProbeTime: null
      lastTransitionTime: '2021-12-01T17:07:23Z'
  hostIP: 192.168.39.23
  podIP: 172.17.0.4
  podIPs:
    - ip: 172.17.0.4
  startTime: '2021-12-01T17:07:23Z'
  containerStatuses:
    - name: todo
      state:
        running:
          startedAt: '2021-12-01T17:07:26Z'
      lastState: {}
      ready: true
      restartCount: 0
      image: ashishdavid/app:latest
      imageID: >-
        docker-pullable://ashishdavid/app@sha256:8d7e343e521a226edc3d1ae63b13e2e2c4bfb29a382f871849c18b649271d8bc
      containerID: >-
        docker://162e94d3addd73a944f735bc96586ea4537bce8dd40dc3690aee420bbbb064a9
      started: true
  qosClass: BestEffort
