service.yaml
apiVersion: v1
kind: Service
metadata:
        name: web-service
spec:
        ports:
         - port: 5000
        selector:
           app: web
